# nlobkfitter

./: .gitignore  CMakeLists.txt  Makefile  README.md  array-charm-mass-scan-all-fits.sh  array-charm-mass-scan.sh  beautydata-comp-massive.sh  charmdata-comp-massive.sh  data-comp-massive.sh  filelist.m  installation.md  light+charm+beauty-comp-massive.sh  light+charm-comp-massive.sh  nlobklibtest.cpp  run_batch.sh  run_sigma3.sh  run_z2imp.sh
data/: h1_fl_averageddata_1312.4821tab6.txt  hera_combined_sigmar.txt
data/light_quark_f2/: hera_I_combined_eminus_lightq
run-scripts/: echo-fit-sbatch.sh  evoke-script.sh  evoke-unsub-resumbk-pdrc-z2imp-fits.sh  gamma_plots.sh  lhec_plots.sh  unsub-resum-pdrc-z2imp-unb-echo_fit.sh
run-scripts/echo_inputs/: unsub-kcbk-pdrc-z2imp-unb-fit.sh  unsub-kcbk-sdrc-z2imp-unb-fit.sh  unsub-resum-pdrc-z2imp-unb-fit.sh  unsub-resum-sdrc-z2imp-unb-fit.sh  unsub-trbk-pdrc-z2sim-unb-fit.sh  unsub-trbk-sdrc-z2sim-unb-fit.sh
src/: .gitignore  CMakeLists.txt  cache.cpp  cache.hpp  data.cpp  data.hpp  ddis.cpp  ddis.hpp  dipole.cpp  dipole.hpp  helper.cpp  helper.hpp  ic_datafile.cpp  ic_datafile.hpp  lightq-fit.cpp  lightq_scan.cpp  lo-fit-plot.cpp  main.cpp  main_switches.cpp  massive_swarmscan.cpp  mv-nucl.cpp  mv-nucl.hpp  mv.cpp  mv.hpp  nlobk_config.cpp  nlobk_config.hpp  nlocgc_fitter.cpp  nlodis_config.cpp  nlodis_config.hpp  nlodissigmar.cpp  nlodissigmar.hpp  nlodissigmar_massiveq.cpp  nlodissigmar_massiveq.hpp  solver.cpp  solver.hpp  sub_unsub_test.cpp  swarmscan.cpp  tool_fl.cpp  tool_plot.cpp  tool_plot_ddis.cpp  (+2 more)
(+1 files in other folders)
